[gd_scene load_steps=10 format=3 uid="uid://djlvbcsqvnxlw"]

[ext_resource type="Script" path="res://testgame.gd" id="1_aisom"]
[ext_resource type="PackedScene" uid="uid://c5ldhpn6hxvjo" path="res://playertest.tscn" id="1_s0lxf"]
[ext_resource type="PackedScene" uid="uid://bgyuj6ykvf7r5" path="res://characters/treetest.tscn" id="2_ks5bi"]
[ext_resource type="Texture2D" uid="uid://cw8q7o0dylrp5" path="res://Textures/Textures_by_Ilya/Prop/Gameplay/Pause_button/Button_pause_2.png" id="2_r4lo1"]
[ext_resource type="FontFile" uid="uid://ch2bfqsviedw5" path="res://Textures/Textures_by_Ilya/Font/Aos-Regular.ttf" id="3_w5a3i"]
[ext_resource type="Texture2D" uid="uid://dqpdfg8kossfc" path="res://Textures/Textures_by_Ilya/Prop/Gameplay/Timer/Timer_back.png" id="3_yo8o4"]
[ext_resource type="PackedScene" uid="uid://dncs6766etnt3" path="res://ui.tscn" id="4_wuws7"]
[ext_resource type="PackedScene" uid="uid://chdp01hfc037q" path="res://Textures/Textures_by_Ilya/Prop/Map/Wooden_box/woodenbox.tscn" id="8_ly2ss"]

[sub_resource type="Curve2D" id="Curve2D_0t50q"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -230.29, -169.084, 0, 0, 0, 0, 1664, -191, 0, 0, 0, 0, 1665.37, 1099.04, 0, 0, 0, 0, -245, 1110, 0, 0, 0, 0, -231, -168, 0, 0, 0, 0, -232, -167)
}
point_count = 6

[node name="game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_aisom")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -33

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.08339
anchor_bottom = 1.03644
offset_right = -158.1
offset_bottom = -30.3528
color = Color(0.556295, 0.380514, 0.0939515, 1)
metadata/_edit_use_anchors_ = true

[node name="PauseButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1002.0
offset_top = 43.0
offset_right = -918.0
offset_bottom = 127.0
grow_horizontal = 0
icon = ExtResource("2_r4lo1")
flat = true
expand_icon = true

[node name="TimerBack" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(-948, 295)
texture = ExtResource("3_yo8o4")

[node name="time" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 912.0
offset_top = 6.0
offset_right = 1011.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("3_w5a3i")
theme_override_font_sizes/font_size = 50
text = "00:00"

[node name="Player" parent="." instance=ExtResource("1_s0lxf")]
position = Vector2(959, 542)
platform_floor_layers = 4294967288

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-644.174, -427.266)
scale = Vector2(1.0197, 1.00384)
curve = SubResource("Curve2D_0t50q")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-230.29, -169.084)
rotation = -0.011569

[node name="Oilpump6" parent="." instance=ExtResource("2_ks5bi")]
position = Vector2(1467, 220)

[node name="Oilpump5" parent="." instance=ExtResource("2_ks5bi")]
position = Vector2(811, 884)

[node name="Oilpump4" parent="." instance=ExtResource("2_ks5bi")]
position = Vector2(545, 886)

[node name="Oilpump3" parent="." instance=ExtResource("2_ks5bi")]
position = Vector2(1091, 880)

[node name="Oilpump2" parent="." instance=ExtResource("2_ks5bi")]
position = Vector2(1378, 889)

[node name="Oilpump1" parent="." instance=ExtResource("2_ks5bi")]
position = Vector2(1737, 215)

[node name="Oilpump" parent="." instance=ExtResource("2_ks5bi")]
position = Vector2(1694, 906)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="UIs" parent="." instance=ExtResource("4_wuws7")]

[node name="Wooden_box" parent="." instance=ExtResource("8_ly2ss")]
position = Vector2(359, 556)

[node name="Wooden_box2" parent="." instance=ExtResource("8_ly2ss")]
position = Vector2(473, 554)

[connection signal="pressed" from="CanvasLayer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="health_gone" from="Player" to="." method="_on_player_health_gone"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
